# melatonin_inspector

./: .clang-format  CMakeLists.txt  InspectorBinaryData.h  README.md  copy_cmake_assets.rb  melatonin_inspector.cpp  melatonin_inspector.h
.github/workflows/: ci.yml
LatestCompiledAssets/: BinaryData1.cpp  BinaryData10.cpp  BinaryData11.cpp  BinaryData12.cpp  BinaryData13.cpp  BinaryData14.cpp  BinaryData15.cpp  BinaryData16.cpp  BinaryData17.cpp  BinaryData18.cpp  BinaryData19.cpp  BinaryData2.cpp  BinaryData20.cpp  BinaryData21.cpp  BinaryData22.cpp  BinaryData23.cpp  BinaryData3.cpp  BinaryData4.cpp  BinaryData5.cpp  BinaryData6.cpp  BinaryData7.cpp  BinaryData8.cpp  BinaryData9.cpp  InspectorBinaryData.h  input_file_list
melatonin/: box_model.h  color_model.h  component_model.h  component_preview.h  component_tree_view_item.h  helpers.h  inspector_component.h  inspector_panel.h  lookandfeel.h  model.h  overlay.h  preview_model.h  properties_model.h  tree_model.h
melatonin/components/: accesibility.h  box_model.h  collapsable_panel.h  color_picker.h  color_picker_panel.h  colour_property_component.h  component_tree_view_item.h  fps_meter.h  image_button.h  inspector_image_button.h  inspector_panel.h  overlay.h  preview.h  preview_model.h  preview_panel.h  properties.h  properties_model.h  properties_panel.h  style_component.h  tree_component.h  undo_manager_inspector.h
melatonin/helpers/: colors.h  component_helpers.h  misc.h  mouse_listener.h  overlay_mouse_listener.h
melatonin_inspector/: melatonin_inspector.cpp  melatonin_inspector.h
melatonin_inspector/LatestCompiledAssets/: BinaryData1.cpp  BinaryData12.cpp  BinaryData13.cpp  BinaryData14.cpp  BinaryData3.cpp  input_file_list
melatonin_inspector/melatonin/: component_model.h
melatonin_inspector/melatonin/components/: color_picker.h  component_tree_view_item.h  preview.h  properties.h
melatonin_inspector/melatonin/helpers/: component_helpers.h  fps.h  misc.h
tests/: dummy.cpp
